--- a/package.json
+++ b/package.json
@@ -21,12 +21,15 @@
   },
   "dependencies": {
     "@hapi/hapi": "^21.3.2",
+    "@hapi/jwt": "^3.2.0",
     "auto-bind": "^4.0.0",
+    "bcrypt": "^5.1.0",
     "dotenv": "^16.0.3",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-prettier": "^4.2.1",
     "joi": "^17.9.2",
     "nanoid": "^3.3.6",
+    "newman": "^5.3.2",
     "node-pg-migrate": "^6.2.2",
     "pg": "^8.11.0"
   }
