--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "nanoid": "^3.3.6",
     "newman": "^5.3.2",
     "node-pg-migrate": "^6.2.2",
-    "pg": "^8.11.0"
+    "pg": "^8.11.0",
+    "redis": "^4.6.7"
   }
 }
